# kodomori

./: README.md
.codegpt/: head
dev/database/: .gitignore  README.md  pyproject.toml
dev/database/SQL/: alerts.sql  cameras.sql  dangers.sql  users.sql
dev/database/src/: main.py
dev/database/src/database/: __init__.py  make_db_table.py  session_db.py  setup.py
dev/database/src/database/api/: alerts.py  cameras.py  dangers.py  users.py
dev/database/src/hoge/: __init__.py
dev/database/src/utils/: function.py  type.py
dev/mobile/: package-lock.json  package.json
dev/mobile/.husky/: commit-msg  pre-commit
dev/mobile/api/: Frame.ts
dev/mobile/app/: +not-found.tsx  _layout.tsx
dev/mobile/app/(tabs)/: _layout.tsx  area.tsx  index.tsx  log.tsx  settings.tsx
dev/mobile/components/: ContomHeaerNursery.tsx  CostomHeader.tsx  Popup.tsx
dev/mobile/database/: alrets.ts  cameras.ts  dangers.ts  users.ts
dev/mobile/redux/: rootReducer.ts  store.ts
dev/python/: .pre-commit-config.yaml  pyproject.toml
dev/python/src/: demo.py  homography_data.json  main.py  zones.json
dev/python/src/lib/: camera_thread.py  frame_buffer.py  point.py  vision_processor.py  yolo_thread.py  zone_manager.py
dev/python/src/routers/: frame.py  test.py
dev/python/src/utils/: camera.py  setup.py  test.py  types.py
dev/python/src/websocket/: camera.py  socket_import.py  test.py
documents/: PostgreSQL のインストールと初期設定ガイド.txt  UI作成のルール.md  rule.md  作業手順.md
documents/DB/: API.md  PostgreSQL のインストールと初期設定ガイド.md  テーブルの定義.md
documents/Rule/: Rule.md
(+29 files in other folders)
